--- a/style.css
+++ b/style.css
@@ -6,3 +6,20 @@ body{
     color: #fff;
     font-family: 'Redressed', cursive;
 }
+.header{
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%);
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 64px;
+    text-shadow: 0px 5px 7px rgba(255, 255, 255, 1);
+}
+.header__mainHeader{
+    margin: 0;
+}
+.header__subTitle{
+    margin: 0;
+}
