--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     background-color: #000;
     color: #fff;
     font-family: 'Redressed', cursive;
+    overflow: hidden;
 }
 .header{
     position: absolute;
