Add basic styles for star
I am going to make better styles for stars(with animation) but on
another branch

--- a/style.css
+++ b/style.css
@@ -24,3 +24,14 @@ body{
 .header__subTitle{
     margin: 0;
 }
+.starsWrapper{
+    border: 1px solid red;
+    height: 80vh;
+    width: 80%;
+    margin: 0 auto;
+}
+.starsWrapper__star{
+    width: 20px;
+    height: 20px;
+    fill: red;
+}
