--- a/style.css
+++ b/style.css
@@ -34,52 +34,120 @@ body{
 .starsWrapper__star{
     width: 20px;
     height: 20px;
+    position: relative;
 }
 .starsWrapper__star--1{
     fill: #FFFF14;
+    position: absolute;
+    bottom: 15%;
+    left: 5%;
 }
 .starsWrapper__star--2{
     fill: #FF6208;
+    position: absolute;
+    bottom: 5%;
+    left: 10%;
 }
 .starsWrapper__star--3{
     fill: #39FF08;
+    position: absolute;
+    bottom: 15%;
+    left: 15%;
 }
 .starsWrapper__star--4{
     fill: #FF00B8;
+    position: absolute;
+    bottom: 5%;
+    left: 20%;
 }
 .starsWrapper__star--5{
     fill: #E80749;
+    position: absolute;
+    bottom: 15%;
+    left: 25%;
 }
 .starsWrapper__star--6{
     fill: #08F7FF;
+    position: absolute;
+    bottom: 5%;
+    left: 30%;
 }
 .starsWrapper__star--7{
     fill: #DF08FF;
+    position: absolute;
+    bottom: 15%;
+    left: 35%;
 }
 .starsWrapper__star--8{
     fill: #00D6FF;
+    position: absolute;
+    bottom: 5%;
+    left: 40%;
 }
 .starsWrapper__star--9{
     fill: #D1E807;
+    position: absolute;
+    bottom: 15%;
+    left: 45%;
 }
 .starsWrapper__star--10{
     fill: #00BDB7;
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
 }
 .starsWrapper__star--11{
     fill: #FFD608;
+    position: absolute;
+    bottom: 15%;
+    left: 55%;
 }
 .starsWrapper__star--12{
     fill: #BD4B00;
+    position: absolute;
+    bottom: 5%;
+    left: 60%;
 }
 .starsWrapper__star--13{
     fill: #FF0095;
+    position: absolute;
+    bottom: 15%;
+    left: 65%;
 }
 .starsWrapper__star--14{
     fill: #5A00E3;
+    position: absolute;
+    bottom: 5%;
+    left: 70%;
 }
 .starsWrapper__star--15{
     fill: #FF5614;
+    position: absolute;
+    bottom: 15%;
+    left: 75%;
 }
 .starsWrapper__star--16{
     fill: #00FFAF;
+    position: absolute;
+    bottom: 5%;
+    left: 80%;
 }
+.starsWrapper__star--17{
+    fill: #171add;
+    position: absolute;
+    bottom: 15%;
+    left: 85%;
+}
+.starsWrapper__star--18{
+    fill: #9554d6;
+    position: absolute;
+    bottom: 5%;
+    left: 90%;
+}
+.starsWrapper__star--19{
+    fill: hsl(147, 86%, 71%);
+    position: absolute;
+    bottom: 15%;
+    left: 95%;
+}
+
