--- a/style.css
+++ b/style.css
@@ -51,113 +51,140 @@ body{
     position: absolute;
     bottom: 55%;
     left: 5%;
+    animation: flashing 1s .2s infinite;
 }
 .starsWrapper__star--2{
     fill: #FF6208;
     position: absolute;
     bottom: 25%;
     left: 10%;
+    animation: flashing 1s 2s infinite;
 }
 .starsWrapper__star--3{
     fill: #39FF08;
     position: absolute;
     bottom: 77%;
     left: 15%;
+    animation: flashing 1s .2s infinite;
 }
 .starsWrapper__star--4{
     fill: #FF00B8;
     position: absolute;
     bottom: 12%;
     left: 20%;
+    animation: flashing .3s 2s infinite;
 }
 .starsWrapper__star--5{
     fill: #E80749;
     position: absolute;
     bottom: 67%;
     left: 25%;
+    animation: flashing .4s .3s infinite;
 }
 .starsWrapper__star--6{
     fill: #08F7FF;
     position: absolute;
     bottom: 58%;
     left: 30%;
+    animation: flashing .7s .2s infinite;
 }
 .starsWrapper__star--7{
     fill: #DF08FF;
     position: absolute;
     bottom: 95%;
     left: 35%;
+    animation: flashing 1s .2s infinite;
 }
 .starsWrapper__star--8{
     fill: #00D6FF;
     position: absolute;
     bottom: 5%;
     left: 40%;
+    animation: flashing .6s .2s infinite;
 }
 .starsWrapper__star--9{
     fill: #D1E807;
     position: absolute;
     bottom: 20%;
     left: 45%;
+    animation: flashing .4s 2s infinite;
 }
 .starsWrapper__star--10{
     fill: #00BDB7;
     position: absolute;
     bottom: 85%;
     left: 50%;
+    animation: flashing 1s .2s infinite;
 }
 .starsWrapper__star--11{
     fill: #FFD608;
     position: absolute;
     bottom: 5%;
     left: 55%;
+    animation: flashing 2s infinite;
 }
 .starsWrapper__star--12{
     fill: #BD4B00;
     position: absolute;
     bottom: 65%;
     left: 60%;
+    animation: flashing 1s infinite;
 }
 .starsWrapper__star--13{
     fill: #FF0095;
     position: absolute;
     bottom: 77%;
     left: 65%;
+    animation: flashing .9s infinite;
 }
 .starsWrapper__star--14{
     fill: #5A00E3;
     position: absolute;
     bottom: 14%;
     left: 70%;
+    animation: flashing .7s .2s infinite;
 }
 .starsWrapper__star--15{
     fill: #FF5614;
     position: absolute;
     bottom: 12%;
     left: 75%;
+    animation: flashing 1s 2s infinite;
 }
 .starsWrapper__star--16{
     fill: #00FFAF;
     position: absolute;
     bottom: 21%;
     left: 80%;
+    animation: flashing .5s 2s infinite;
 }
 .starsWrapper__star--17{
     fill: #171add;
     position: absolute;
     bottom: 81%;
     left: 85%;
+    animation: flashing .3s 1s infinite;
 }
 .starsWrapper__star--18{
     fill: #9554d6;
     position: absolute;
     bottom: 76%;
     left: 90%;
+    animation: flashing 1s 1s infinite;
 }
 .starsWrapper__star--19{
     fill: hsl(147, 86%, 71%);
     position: absolute;
     bottom: 35%;
     left: 95%;
+    animation: flashing .3s .2s infinite;
 }
 
+@keyframes flashing{
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: .4;
+    }
+}
